<resources>
    <string name="app_name">MemoMaker</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">TO-DO</string>
    <string name="title_section2">Memo</string>
    <string name="title_section3">Archive</string>
    <string name="todoprio">Priorität:</string>
    <string name="todos">TODOs</string>
    <string name="memos">MEMO</string>
    <string name="memodate">Erinnerungsdatum:</string>
    <string name="hintmemo">Dein Memo hier</string>
    <string name="hinttodo">Deine Aufgabe hier</string>
    <string name="add">Speichern</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="select_new">Erstelle neue...</string>
    <string name="addmemo">Memo</string>
    <string name="addtodo">ToDo</string>
    <string name="delete_ok">Löschen</string>
    <string name="delete_cancel">Abbrechen</string>
    <string name="dialog_ds_delete">Soll der ausgewählte Eintrag wirklich gelöscht werden?</string>
    <string name="del_dialog_title">Löschen</string>
    <string name="text">Text:</string>

</resources>