<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        android:layout_gravity="start"
        android:id="@+id/addnew"
        android:text="@string/select_new"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/addNewMemo"
        android:text="@string/addmemo"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/addNewTodo"
        android:text="@string/addtodo"/>

</LinearLayout>