<?xml version="1.0" encoding="UTF-8"?>

<android.support.design.widget.CoordinatorLayout

    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/appbar"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:paddingTop="@dimen/appbar_padding_top">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="30dp"
                android:singleLine="true"
                android:background="@color/colorPrimary"
                android:layout_gravity="start"
                android:id="@+id/titletextViewMemo"
                android:text="@string/memos"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

        </android.support.design.widget.AppBarLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titletextViewMemo"
        android:id="@+id/memoDate"
        android:text="@string/memodate"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/newMemo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@id/memoDate"
        android:layout_weight="9"
        android:hint="@string/hintmemo"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:src="@drawable/ic_save_24dp"
        app:layout_anchor="@id/newMemo"
        android:onClick="save"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>